--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "@capacitor/app": "4.1.1",
     "@capacitor/assets": "^2.0.4",
     "@capacitor/core": "4.6.1",
+    "@capacitor/device": "^4.1.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/share": "^4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "capacitor-data-storage-sqlite": "^4.0.1",
     "ionicons": "^6.0.3",
+    "localforage": "^1.10.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
